# stake-allocation-simulation

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  deps.py  main.py  models.py
app/eth/: abi_loader.py  adapter.py
app/services/: csm_service.py  router_service.py
scripts/: dev.sh
snapshots/: 23125611.html
templates/: csm.html  index.html  simulator.html
tests/: conftest.py  test_adapter.py  test_app.py  test_csm_api.py  test_csm_page.py  test_csm_service_decode.py  test_make_router_service.py  test_modules_api.py  test_router_service.py
tests/integration/: test_live_adapter.py  test_live_api.py  test_modules.py
